--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,6 +27,11 @@
                     <li class="nav-item"><a class="nav-link text-gold" th:href="@{/products}">Sản phẩm</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                        <a class="nav-link text-warning fw-bold" th:href="@{/admin}">
+                            <i class="bi bi-speedometer2"></i> Quản trị
+                        </a>
+                    </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link text-gold" th:href="@{/user/profile}">👋 Chào, <span sec:authentication="name"></span></a>
                     </li>
