--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -61,11 +61,8 @@
 													width="150px" height="150px">
 												<p class="fs-5 text-center">[[${p.title}]]</p>
 												<div class="row text-center">
-													<p class="fs-6 fw-bold ">
-														<span><th:block th:utext="${@commonServiceImpl.rupeeSign()}"></th:block> [[${p.discountPrice}]]</span> <br> <span
-															class="text-decoration-line-through text-secondary"><th:block th:utext="${@commonServiceImpl.rupeeSign()}"></th:block>
-															[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
-															off </span>
+													<p class="fs-6 fw-bold">
+														<span th:text="|${#numbers.formatDecimal(p.price, 0, 'COMMA', 0, 'POINT')} VND|"></span>
 													</p>
 													<a th:href="@{'/product/'+${p.id}}"
 														class="btn btn-primary col-md-6 offset-md-3">Xem chi
